--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This is a website all about me. It will include my name, a picture, my social media information, and a brag sheet.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  achndrskhr # DO NOT include the @ character, or else the build will fail!
 facebook_username: Ananya-Chandrasekhar
 
 show_excerpts: true # set to false to remove excerpts on the homepage
