--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ description: > # this means to ignore newlines until "baseurl:"
 
 # social links
 github_username:  achndrskhr # DO NOT include the @ character, or else the build will fail!
-facebook_username: Ananya-Chandrasekhar
+facebook_username: Ananya Chandrasekhar
 
 show_excerpts: true # set to false to remove excerpts on the homepage
