--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: minima
 title: ananya chandrasekhar's apcs project
 author: achndrskhr
-email: achandrasekhar@ebnet.org
+email: ananyaa.chandrasekhar@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   this is a website all about me. it will include my name, a picture, my social media information, and a brag sheet.
 
