--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
+theme: modernist
 title: ananya chandrasekhar's apcs project
 author: achndrskhr
 email: ananyaa.chandrasekhar@gmail.com
